src/test/ui/where-clauses/where-eq-double-eq.rs
pub fn foo<T>() where T == u32 {}
//~^ ERROR type equality

fn main() {}
